[gd_scene load_steps=18 format=3 uid="uid://cgfqxe6vh6aq8"]

[ext_resource type="Script" path="res://Assets/Enemies/Crab-Boss/crab.gd" id="1_lp55m"]
[ext_resource type="Shader" path="res://Assets/Enemies/Crab/crab.gdshader" id="2_80xeg"]
[ext_resource type="Texture2D" uid="uid://c6s6tm63iem2i" path="res://Assets/Enemies/Crab-Boss/crab.png" id="3_wiasy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f6akx"]
shader = ExtResource("2_80xeg")
shader_parameter/enabled = false
shader_parameter/flash = Color(1, 1, 1, 1)
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mhh36"]
atlas = ExtResource("3_wiasy")
region = Rect2(64, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_tohgl"]
atlas = ExtResource("3_wiasy")
region = Rect2(0, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcqvc"]
atlas = ExtResource("3_wiasy")
region = Rect2(64, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_io6rt"]
atlas = ExtResource("3_wiasy")
region = Rect2(256, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn0sj"]
atlas = ExtResource("3_wiasy")
region = Rect2(0, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3iat"]
atlas = ExtResource("3_wiasy")
region = Rect2(64, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_06mwl"]
atlas = ExtResource("3_wiasy")
region = Rect2(128, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc806"]
atlas = ExtResource("3_wiasy")
region = Rect2(192, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wr4g"]
atlas = ExtResource("3_wiasy")
region = Rect2(256, 0, 64, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwdbo"]
atlas = ExtResource("3_wiasy")
region = Rect2(320, 0, 64, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_h8r36"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhh36")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tohgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcqvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io6rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn0sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3iat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06mwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc806")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wr4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwdbo")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbp3k"]
size = Vector2(31.6406, 4.79169)

[sub_resource type="CircleShape2D" id="CircleShape2D_l6nf1"]
radius = 9.38946

[node name="Crab-Boss" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(5.96046e-08, -34)
scale = Vector2(1.518, 1.518)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_lp55m")
health = 20

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(-20.5084, -9.65101)
scale = Vector2(1, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_f6akx")
position = Vector2(-2.60417, -4.16667)
scale = Vector2(1, 0.96875)
sprite_frames = SubResource("SpriteFrames_h8r36")
animation = &"idle"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.04167, 15.1042)
shape = SubResource("RectangleShape2D_jbp3k")

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(14.0625, 17.1875)
target_position = Vector2(0, 4)
collision_mask = 2

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(-13.0208, 16.6667)
target_position = Vector2(-9.53674e-07, 5.20833)
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-67.1875, 31.7708)
scale = Vector2(1.60657, 1.62064)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(41.1066, -21.4176)
shape = SubResource("CircleShape2D_l6nf1")
debug_color = Color(0.952941, 0, 0.54902, 0.419608)

[node name="pauseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="bufferTimer" type="Timer" parent="."]
one_shot = true

[node name="bulletCooldown" type="Timer" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="pauseTimer" to="." method="_on_pause_timer_timeout"]
[connection signal="timeout" from="bufferTimer" to="." method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="bulletCooldown" to="." method="_on_bullet_cooldown_timeout"]
